# tavily-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: advanced_search.rs  basic_extract.rs  basic_search.rs  improved_search.rs
src/: client.rs  error.rs  lib.rs  request.rs  response.rs
