[package]
name = "tavily"
version = "0.1.0"
edition = "2021"
authors = ["Pierre-Louis Létoquart <randlgint@proton.me>"]
description = "A minimal crate to send request to the tavily REST api"
license = "MIT"
homepage = ""
repository = ""
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
