[package]
name = "tavily"
version = "1.0.0"
edition = "2021"
authors = ["Pierre-Louis Létoquart <randlgint@proton.me>"]
description = "A tiny tool for calling Tavily's REST API in the simplest way!"
license = "MIT"
repository = "https://github.com/PierreLouisLetoquart/tavily-rs"
keywords = ["Tavily", "search-engine", "web-browser", "llm-search", "rag"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }

