[package]
name = "tavily"
version = "2.0.0"
edition = "2021"
authors = ["Pierre-Louis Létoquart <randlgint@proton.me>"]
description = "A tiny tool for calling Tavily's REST API in the simplest way!"
license = "MIT"
repository = "https://github.com/PierreLouisLetoquart/tavily-rs"
keywords = ["Tavily", "search-engine", "web-browser", "llm-search", "rag"]

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "basic_search"
path = "examples/basic_search.rs"

[[example]]
name = "advanced_search"
path = "examples/advanced_search.rs"
